--- a/arf.html
+++ b/arf.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><cutiepatotie class="baom"></cutiepatotie></title>
+	<title>cutiepatotie.baom</cutiepatotie></title>
+	<meta name="cutiepatotie" content="index,follow">
 	<style>
 body{
 	background-image: url('boboka.jfif'); 
@@ -91,7 +92,8 @@ body{
 	    </div>
 	
 		
-
+	
+        
 </body>
 
 </html>
